dataset1235/2025-2/1955397009/users/2540684130/executions/1107611404_4233865845.log
== RUN (2025-08-21 13:11:22)
-- CODE: 
celcius = float(input("Insira a temperatura em celcius: "))
fahrenheit = celcius * 9/5 + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira a temperatura em celcius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira a temperatura em celcius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira a temperatura em celcius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira a temperatura em celcius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira a temperatura em celcius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira a temperatura em celcius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:11:03)
-- CODE: 
celsius = float(input("Insira a temperatura em celsius: "))
fahrenheit = celcius * 9/5 + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined. Did you mean: 'celsius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:10:22)
-- CODE: 
input("Insira a temperatura em celsius: ")
fahrenheit = celcius * 9/5 + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:11:41)
-- CODE: 
celcius = float(input("Insira a temperatura em celcius: "))
fahrenheit = celcius * 9/5 + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira a temperatura em celcius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira a temperatura em celcius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira a temperatura em celcius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira a temperatura em celcius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira a temperatura em celcius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira a temperatura em celcius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:11:24)
-- CODE: 
celcius = float(input("Insira a temperatura em celcius: "))
fahrenheit = celcius * 9/5 + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Insira a temperatura em celcius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Insira a temperatura em celcius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Insira a temperatura em celcius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Insira a temperatura em celcius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Insira a temperatura em celcius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Insira a temperatura em celcius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:10:40)
-- CODE: 
float(input("Insira a temperatura em celsius: "))
fahrenheit = celcius * 9/5 + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = celcius * 9/5 + 32
                 ^^^^^^^
NameError: name 'celcius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
